# clip_test

./: .gitattributes  .gitignore  app.py  config.yaml  pyproject.toml  requirements.txt
src/: comparing.py  download_images.py  encode_image.py  enrich.py  image_model.py  image_utils.py  parse_celeba_tags.py  parse_clothes_tags.py  super_category.py  text_model.py
src/image_tagging/: baseLLm.py  categories.json  category_manager.py  create_dataset.py  llava_llm.py  oai_llm.py  tag_images.py  tmp.py
