[tool.poetry]
name = "clip-outputs"
version = "0.1.0"
description = ""
authors = ["dorgold46 <dgoldenberg@lightricks.com>"]
readme = "README.md"
packages = [{include = "clip_outputs"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.36.0"
scikit-learn = "^1.3.2"
clip = "^0.2.0"
h5py = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

